fix for white space at right side in mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -2,6 +2,10 @@ body {
   font -font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif !important;
   color: #323232 !important;
 }
+html,body
+{
+    overflow-x: hidden; 
+}
 
 .nice_font{
     
